--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.10"
 
 dependencies = [
     "django>=5.2",
+    "django-filter>=25.1",
     "djangorestframework>=3.16.0",
     "ipykernel>=6.29.5",
+    "markdown>=3.8.2",
     "numpy>=2.2.4",
     "requests>=2.32.3",
     "scipy>=1.15.2",
