--- a/bsm/Dockerfile
+++ b/bsm/Dockerfile
@@ -31,4 +31,7 @@ COPY . /app/
 EXPOSE 8000
  
 # Run Django’s development server
+# RUN python3 manage.py makemigrations
+RUN ["python", "manage.py", "migrate"]
+
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
