--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django>=5.2",
     "django-filter>=25.1",
     "djangorestframework>=3.16.0",
+    "gunicorn>=23.0.0",
     "ipykernel>=6.29.5",
     "markdown>=3.8.2",
     "numpy>=2.2.4",
